# upb

./: alembic.ini  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt
alembic/: env.py
app/: main.py
app/article_history/: article_history_schemas.py  crud_history.py  routes_history.py
app/articles/: article_history_schemas.py  crud.py  crud_history.py  models.py  routes.py  routes_history.py  schemas.py
app/auth/: crud.py  dependencies.py  models.py  routes.py  schemas.py  utils.py
app/authors/: crud.py  models.py  routes.py  schemas.py
app/categories/: crud.py  models.py  routes.py  schemas.py
app/comments/: crud.py  models.py  routes.py  schemas.py
app/content_types/: crud.py  models.py  routes.py  schemas.py
app/core/: config.py
app/db/: database.py
app/logs/: crud.py  models.py  routes.py  schemas.py
app/media/: crud.py  models.py  routes.py  schemas.py
app/metrics/: crud.py  models.py  routes.py  schemas.py
app/roles/: crud.py  models.py  routes.py  schemas.py
app/social_integrations/: crud.py  models.py  routes.py  schemas.py
app/tags/: crud.py  models.py  routes.py  schemas.py
tests/: test_auth_and_roles.py
